Reset password (#17)
* send emails fails.

* comment body validation.

* working.

* fix refactor.

* adding tests.

* adding tests.

* add tests.

* remove vscode folder.

* add tests.

* add tests.

* add test and remove secrets.

* Bye warnings

* update swagger.

* tll by config.

* remove unnecessary log.

* fixes.

* some code review fixes.

* update test and swagger.

* typo.

* Move getting user.

* add construct blueprint.
